...
            }}
          />
          <MaterialBottomTabs.Screen
            name="balance"
            options={{
              tabBarAccessibilityLabel: "BalanceBottomTab",
              title: "Balance",
              tabBarIcon: ({ color }) => (
                <MaterialIcons name="balance" size={24} color={color} />
              ),
            }}
          />
          <MaterialBottomTabs.Screen
...
              ),
            }}
          />
          <MaterialBottomTabs.Screen
            name="settings"
            options={{
              tabBarAccessibilityLabel: "Settings",
              title: "Settings",
              tabBarIcon: ({ color }) => (
                <MaterialIcons testID="settings-icon" name="settings" size={24} color={color} />
              ),
            }}
          />
...
