...
          publicAddress={account!.getAddress()}
        />
        <Card style={styles.genericCard}>
          <Card.Title title="Balance" titleVariant="titleLarge" />
          <Card.Content>
            {!isLoading && balance ? (
              <Text testID="home-balance" style={styles.balance}>
                {formatBalance(parseFloat(balance), 4)} ETH
              </Text>
            ) : (
              <ActivityIndicator />
            )}

...
          </Card.Content>
        </Card>

        <View style={styles.horizontalContainer}>
          <View style={{ alignItems: "center" }}>
            <FAB
              testID="home-contacts-button"
              size="medium"
              icon="contacts"
              variant="secondary"
              onPress={() => router.push({ pathname: "contacts" })}
            />
            <Text style={{ textAlign: "center", marginTop: 8 }}>Contacts</Text>
...
